--- a/package.json
+++ b/package.json
@@ -97,9 +97,12 @@
     "@xterm/addon-webgl": "^0.19.0-beta.119",
     "@xterm/headless": "^5.6.0-beta.119",
     "@xterm/xterm": "^5.6.0-beta.119",
+    "gulp-merge-json": "^2.2.1",
+    "gulp-sort": "^2.0.0",
     "http-proxy-agent": "^7.0.0",
     "https-proxy-agent": "^7.0.2",
     "jschardet": "3.1.4",
+    "jsonc-parser": "^3.3.1",
     "katex": "^0.16.22",
     "kerberos": "2.1.1",
     "minimist": "^1.2.8",
@@ -109,6 +112,7 @@
     "node-pty": "^1.1.0-beta33",
     "open": "^10.1.2",
     "tas-client-umd": "0.2.0",
+    "ternary-stream": "^3.0.0",
     "v8-inspect-profiler": "^0.1.1",
     "vscode-oniguruma": "1.7.0",
     "vscode-regexpp": "^3.1.0",
@@ -152,6 +156,7 @@
     "ansi-colors": "^3.2.3",
     "asar": "^3.0.3",
     "chromium-pickle-js": "^0.2.0",
+    "cockatiel": "^3.2.1",
     "cookie": "^0.7.2",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.9.1",
@@ -188,6 +193,7 @@
     "istanbul-lib-report": "^3.0.0",
     "istanbul-lib-source-maps": "^4.0.1",
     "istanbul-reports": "^3.1.5",
+    "istanbul-to-vscode": "^2.1.1",
     "lazy.js": "^0.4.2",
     "merge-options": "^1.0.1",
     "mime": "^1.4.1",
